2016-05-31

Implemented Enhancements
* Changed output L0 naming convention (no more = signs)
* CHanged default value for laser array size to 10,000m

2015-05-29

Implemented Enhancements
* CSS: Made header and footer heights smaller

2016-05-25

Implemented Enhancements
* Add output: Flux on Sail
* Changed unit for sail_size from m/cm^2 to m

2016-05-17

Implemented Enhancements
* Add output: Laser Comm Bit Rate Received in Array

2016-05-16

Implemented Enhancements
* Renamed "Laser Power" to "Laser Power in Main Beam"
* Add output: Launch Efficiency at L0
* Add output: Laser Comm Wavelength at Speed at L0
* Add output: Laser Comm Wavelength at Limiting Speed
* Changed units for Energy Cost to $/kW*hr from $/W*hr

Fixed Bugs
* Electrical Energy at L0 - multiply by t0_time_to_L0

2016-05-14

Implemented Enhancements
* Renamed "Laser Comm Rate at Earth Received in Array" to "Laser Comm Rate Received in Array"
* Changed Laser Comm Photon Rate at Earth Received in Array units to ph/s
* Add input: Laser Comm Wavelength (nm) after Peak Laser Comm Power (W)
* Add input: Default Laser Comm Beam Efficiency to 1. The multiply Laser Comm Flux at Earth by Laser Comm Beam Efficiency
* Add input: Photons per bit for communication (ph/bit) after Peak Laser Comm Power (W)
* Add output: Bit rate received at Earth  (units will be bits/s) = Laser Comm Rate at Earth Received in Array/ Photons per bit for communication (ph/bit) after Laser Comm Rate at Earth Received in Array
Note I replaced "lambda (main high power laser) wavelength with Laser Comm Wavelength (nm) below to allow for a different laser comm wavelength that the main high power laser in the drive array.
* Change output: Laser_comm_spacecraft_power_peak= peak laser comm power in watts
* Change output: Laser_comm_spacecraft_optics_size= spacecraft laser comm optical size lambda_laser_comm_wavelength(nm)
* Change output: Laser Comm Flux at Earth (ph/s-m^2)= epsilon_sub_laser_comm_beam_eff*