@@ -109,6 +109,13 @@
     <h1>UC Santa Barbara Laser Propulsion (Classical 1D)</h1>
   </header>
   <div id="main">
+    <nav>
+      <ul>
+        <li>
+          <button id='download_csv'>Download CSV</button>
+        </li>
+      </ul>
+    </nav>
     <table id="inputs">
       <caption>
         <h2>
