@@ -1,8 +1,13 @@
+2016-06-01
+
+Implemented Enhancements
+* Added download CSV feature
+
 2016-05-31
 
 Implemented Enhancements
 * Changed output L0 naming convention (no more = signs)
-* CHanged default value for laser array size to 10,000m
+* Changed default value for laser array size to 10,000m
 
 2015-05-29
 
